<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HowManyDroid</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="help">Help</string>
    <string name="demo1">Demo/Test Beanshell</string>
    <string name="demo2">Demo/Test JScience</string>
    <string name="demo3">Demo/Test Mathjax AsciiMath</string>
    <string name="demo4">Demo/Test Mathjax TEX</string>
    <string name="demo5">Demo/Test Mathjax MathML</string>
    <string name="demo6">Demo/Test Parser / Eval</string>
    <string name="demo7">Demo Mockup 1</string>
    <string name="demo8">Test Reuse Webview</string>

    <string name="title_activity_web_view_reuse">WebViewReuseActivity</string>
    <string name="list_categories">list_categories</string>

    <!--<string name="hello_world">Hello world!</string>-->
    <!--<string name="action_settings">Settings</string>-->

</resources>
