<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/demo1"
        android:orderInCategory="21"
        android:title="@string/demo1" />

    <item
        android:id="@+id/demo2"
        android:orderInCategory="22"
        android:title="@string/demo2" />

    <item
        android:id="@+id/demo3"
        android:orderInCategory="23"
        android:title="@string/demo3" />

    <item
        android:id="@+id/demo4"
        android:orderInCategory="24"
        android:title="@string/demo4" />

    <item
        android:id="@+id/demo5"
        android:orderInCategory="25"
        android:title="@string/demo5" />

    <item
        android:id="@+id/demo6"
        android:orderInCategory="26"
        android:title="@string/demo6" />


    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings" />

    <item
        android:id="@+id/help"
        android:orderInCategory="101"
        android:title="@string/help" />

</menu>
